[FIX] Algumas correções em erros com o portugues

--- a/inf1300_relax/i18n/pt.json
+++ b/inf1300_relax/i18n/pt.json
@@ -9,8 +9,8 @@
     "escreverDiarioPageInsert": "Insira seu texto aqui",
     "escreverDiarioPageEdit": "Editar texto",
     "selecionarHumor": "Como você está se sentindo hoje?",
-    "ajustes": "ajustes",
-    "sair": "sair",
+    "ajustes": "Ajustes",
+    "sair": "Sair",
     "respiração": "Respiração",
     "modoEscuro": "Ativar modo escuro",
     "perfil": "Perfil",
