--- a/inf1300_relax/i18n/pt.json
+++ b/inf1300_relax/i18n/pt.json
@@ -49,5 +49,10 @@
     "respiracaocompleta": "Respiração Completa",
     "opa": "Opa!",
     "jaescreveu": "Já escreveu no diário hoje",
-    "jaselecionouhumor": "Voce ja selecionou seu humor hoje!"
+    "selecionouhumor": "Humor atualizado!",
+    "respiracaoquadradadetalhe": "\n 1 - Inspire por 4 segundos \n 2 - segure o ar dentro dos pulmões e conte até 4 \n 3 - expire pela boca, esvaziando os pulmões e a barriga contando até 4 \n 4 - Pausa contando até 4",
+    "respiracaoabdominaldetalhe": "\n 1 - Sinta o ar encher os pulmões e o abdômen subir \n 2 - segure o ar dentro dos pulmões e conte até 2 \n 3 - expire pela boca, esvaziando os pulmões e a barriga contando até 6",
+    "respiracaoaltadetalhe": "A Respiração Alta é como nós respiramos normalmente. A atenção a esses movimentos ajuda a controlar melhor a quantidade de ar que inalamos e exalamos e o tempo usado para essa ação. ",
+    "respiracaocompletadetalhe": "Inspire o ar e sinta-o preenchendo a região abdominal, inflando a barriga e o peito, expandindo a região das costelas para fora e os ombros para cima, como se o seu corpo estivesse abrindo espaço interno.Lentamente faça o movimento no sentido contrário para a expiração.",
+    "hey": "Opa!"
 }
